src/objects/Progress_Dates__c.object
<CustomObject>
    <description>Project Progress Dates</description>
    <fields>
        <fullName>Chillers_Shipped_Date_Comments__c</fullName>
        <label>Chillers Shipped Date Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chillers_Shipped__c</fullName>
        <label>Chillers Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chillers_Witness_Tested__c</fullName>
        <label>Chillers Witness Tested</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Comments__c</fullName>
        <label>Contract Signed Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <description>Contract Signed Date</description>
        <label>Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EST_Chillers_Shipped_Comments__c</fullName>
        <label>EST Chillers Shipped Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EST_Chillers_Shipped_Date__c</fullName>
        <label>EST Chillers Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Info_Comments__c</fullName>
        <label>Job Info Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Info_Complete_Credit_Reviewed__c</fullName>
        <description>Project Job Info Complete &amp; Credit Reviewed</description>
        <label>Job Info Complete &amp; Credit Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Comments__c</fullName>
        <label>Legal Review Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Review__c</fullName>
        <description>Legal Review</description>
        <label>Legal Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCP_Invoiced_Comments__c</fullName>
        <label>MCP Invoiced Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MCP_Invoiced__c</fullName>
        <label>MCP Invoiced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCP_Ordered_Comments__c</fullName>
        <label>MCP Ordered Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MCP_Ordered__c</fullName>
        <label>MCP Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCP_Perf_Testing_Comments__c</fullName>
        <label>MCP Perf Testing Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MCP_Perf_Testing__c</fullName>
        <label>MCP Perf Testing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCP_Shipped_Comments__c</fullName>
        <label>MCP Shipped Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MCP_Shipped__c</fullName>
        <label>MCP Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCP_Startup_Comments__c</fullName>
        <label>MCP Startup Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MCP_Startup__c</fullName>
        <label>MCP Startup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Submitted_into_MST__c</fullName>
        <label>Order Submitted into MST?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAR_Comments__c</fullName>
        <label>PAR Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PAR__c</fullName>
        <description>PAR Date</description>
        <label>PAR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Delays__c</fullName>
        <label>Production Delays?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Progress Dates</relationshipLabel>
        <relationshipName>Progress_Dates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Reviewed_Comments__c</fullName>
        <label>Proposal Reviewed Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposal_Reviewed__c</fullName>
        <description>Proposal Reviewed Date</description>
        <label>Proposal Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFQ_Comments__c</fullName>
        <label>RFQ Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RFQ__c</fullName>
        <label>RFQ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selection_in_MST_Comments__c</fullName>
        <label>Selection in MST Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Selection_in_MST__c</fullName>
        <label>Selection in MST</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submittals_Approved__c</fullName>
        <label>Submittals Approved?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Progress Dates</label>
    <nameField>
        <displayFormat>PD-{0000000000}</displayFormat>
        <label>Progress Dates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progress Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>